# sc-simplify

./: .gitignore  Cargo.toml  README  README.md
.cargo/: config.toml
Python/: sc_io.py
sage/: sc_io.sage
src/: cli.rs  helpers.rs  io.rs  lib.rs  main.rs  partial_bijection_complex.rs  s_complex.rs  simplex.rs  simplicial_complex.rs  style.rs
src/for_main/: cli.rs  mod.rs
src/homology/: arithmetic.rs  chain_complex.rs
src/simplicial_complex/: mod.rs  simplex.rs  simplicial_complex.rs  simplicial_complex.rs.new.bak
