[package]
name = "sc-simplify"
version = "0.2.0"
authors = ["Kaya Arro"]
edition = "2024"
description = "Takes a simplicial complex and returns a smaller complex or pair of the same homotopy type"


[dependencies]
clap = { version = "4.5.34", features = ["cargo", "derive", "wrap_help"] }
cute = "0.3.0"
derive = "1.0.0"
fasthash = "0.4.0"
rustc-hash = "2.1.1"


[build-dependencies]
clap = { version = "4.5.34", features = ["cargo", "derive", "wrap_help"] }
clap_mangen = "0.2.26"


[profile.release]
opt-level = 3
overflow-checks = true
lto = "fat"
codegen-units = 1
