[package]
name = "sc-simplify"
version = "1.1.0"
authors = ["Kaya Arro"]
edition = "2024"
description = "Takes a simplicial complex and returns a smaller complex or pair of the same homotopy type"


[dependencies]
clap = { version = "4.5.34", features = ["cargo", "derive", "wrap_help"] }
console = "0.15.11"
indicatif = "0.17.11"
rustc-hash = "2.1.1"


[build-dependencies]
clap = { version = "4.5.34", features = ["cargo", "derive", "wrap_help"] }
clap_mangen = "0.2.26"


[profile.release]
opt-level = 3
overflow-checks = true
lto = "fat"
codegen-units = 1


[profile.profiling]
inherits = "release"
debug = true
strip = "none"
